Wed Feb 18 16:04:22 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (thisconfigdir): Remove trailing slash.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Feb  5 19:17:25 1998  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c: Move macro definition of klog earlier so that it
	actually gets used inside process_v4().

Wed Feb  4 14:15:20 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* kerberos_v4.c (process_v4): Check the length of the incoming V4
		packet before copying it into the KTEXT_ST variable.
		(kerberos_v4): Make sure the strings in the V4 request
		structures aren't no longer than they are allowed to be.

Wed Jan 28 08:56:07 1998  Ezra Peisach  <epeisach@mit.edu>

	* krb5kdc.M: Document V4 mode handling [krb5-kdc/464].

Wed Jan 21 15:15:58 1998  Ezra Peisach  <epeisach@mit.edu>

	* rtest.c (main): returns int, not void. ANSI X3.159-1989
	2.1.2.2.1 says so, and gcc now warns about it.

Fri Jan 16 03:33:50 1998  Tom Yu  <tlyu@mit.edu>

	* do_tgs_req.c: Add some explicit settings of errcode so that the
 	cleanup code doesn't try to construct a bogus error reply, which
 	was causing coredumps in the lookaside code.

Thu Dec 11 23:29:41 1997  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c: Don't include sys/socket.h or netdb.h, as krb.h
	already gets those and Ultrix doesn't protect them against
	multiple inclusion.

Mon Nov 24 19:57:48 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* do_tgs_req.c (process_tgs_req): Add check to make sure cname and
		sname are non-NULL when syslogging an error because the
		principals don't match.
	
	* kdc_util.c (limit_string): Check to make sure the input string
		is non-NULL before operating on it.

Thu Nov 13 20:40:01 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* do_tgs_req.c (process_tgs_req): Only try to return a TGT for a
		"closer" realm if the request was for a TGT in the first
		place.  [krb5-kdc/459]
